2005-08-10  Maxim Dziumanenko <mvd@mylinux.ua>

	* configure.ac: Added "uk" to ALL_LINGUAS

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 2.11.91

==================== 2.11.90 ====================

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: Version 2.11.90.

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/paneldelegate.py: add some more debug
	spew.

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	Allow ignoring changes to specific GConf keys.
	Bug #310514

	* lib/config.py.in: add GCONF_KEYS_TO_IGNORE
	
	* lib/sources/gconfsource.py: ignore notifications
	of changes to keys which match any pattern in
	GCONF_KEYS_TO_IGNORE
	
2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: looks like .ICEauthority gets
	created initially as .ICEauthority-c or whatever.
	Ignore those files too.

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	Fix issue with stacking behaviour of windows.
	Turns out to be that you shouldn't have a
	_NET_WM_WINDOW_TYPE_NORMAL window whose
	transient parent is _NET_WM_WINDOW_TYPE_DIALOG.
	Bug #305181

	* admin-tool/sabayon.glade: set type_hint on
	profiles_dialog to _NET_WM_WINDOW_TYPE_DIALOG
	and window_position to GTK_WIN_POS_CENTER.

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py: fix another instance of
	a translator-unfriendly	string. Bug #308363

2005-07-29  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: on FC5, require pygtk-2.7.1 for
	the MessageDialog constructor fix in bug #311226.
	pygtk-2.6.x should work fine too, though.

2005-07-29  Mark McLoughlin  <markmc@redhat.com>

	Fixes bug #308363

	* lib/sources/mozillasource.py,
	  lib/storage.py: add variable names to some
	format strings so translators can switch around
	their order.

2005-07-29  Mark McLoughlin  <markmc@redhat.com>

	* lib/util.py: turn deprecation warnings off by
	default unless you do SABAYON_DEBUG=deprecated
