@@ -1,3 +1,10 @@
+2005-08-15  Mark McLoughlin  <markmc@redhat.com>
+
+	* lib/protosession.py: create a copy of os.envrion
+	before modifying it.
+	
+	* sabayon.spec.in: sync some changes from downstream.
+
 2005-08-10  Maxim Dziumanenko <mvd@mylinux.ua>
 
 	* configure.ac: Added "uk" to ALL_LINGUAS
